JNG-5368 add access instance helper methods